--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="../static/css/site.css" type="text/css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script type="module" src="init.js"></script>
 </head>
 
 <body>  
@@ -29,7 +30,7 @@
                 </li> 
             </ul>
         </nav>
-        
+        <div id="root"></div>
         <section class="notifications" style="display: none;">
             <p class="notification-message" id="errorBox">Message...</p>
         </section>
